--- a/index_2.html
+++ b/index_2.html
@@ -82,7 +82,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-8">
 							<ul class="header_contact_info ul_li clearfix">
-								<li><i class="far fa-map-marker-alt"></i> 20 Main Street, USA</li>
+								<li><i class="far fa-map-marker-alt"></i> Kakuma 4, Turkana Kenya</li>
 								<li><i class="far fa-envelope-open"></i> support@gmail.com</li>
 								<li><i class="far fa-clock"></i> Sun - Monday, 09 am - 04 pm</li>
 							</ul>
