--- a/gallery.html
+++ b/gallery.html
@@ -82,9 +82,9 @@
 				<div class="row align-items-center">
 					<div class="col-lg-8">
 						<ul class="header_contact_info ul_li clearfix">
-							<li><i class="far fa-map-marker-alt"></i> 20 Main Street, USA</li>
-							<li><i class="far fa-envelope-open"></i> support@gmail.com</li>
-							<li><i class="far fa-clock"></i> Sun - Monday, 09 am - 04 pm</li>
+							<li><i class="far fa-map-marker-alt"></i> Kakuma 4, Turkana, Kenya</li>
+							<li><i class="far fa-envelope-open"></i> heatartkakuma@gmail.com</li>
+							<li><i class="far fa-clock"></i>Monday - Saturday, 09 am - 06 pm</li>
 						</ul>
 					</div>
 
@@ -92,13 +92,13 @@
 						<ul class="header_items_list ul_li_right clearfix">
 							<li>
 								<ul class="primary_social_links ul_li clearfix">
-									<li><a href="portfolio_metro.html#!"><i class="fab fa-facebook-f"></i></a></li>
-									<li><a href="portfolio_metro.html#!"><i class="fab fa-twitter"></i></a></li>
-									<li><a href="portfolio_metro.html#!"><i class="fab fa-youtube"></i></a></li>
-									<li><a href="portfolio_metro.html#!"><i class="fab fa-linkedin"></i></a></li>
+									<li><a href="contact.html#!"><i class="fab fa-facebook-f"></i></a></li>
+									<li><a href="contact.html#!"><i class="fab fa-twitter"></i></a></li>
+									<li><a href="contact.html#!"><i class="fab fa-youtube"></i></a></li>
+									<li><a href="contact.html#!"><i class="fab fa-linkedin"></i></a></li>
 								</ul>
 							</li>
-							<li>
+							<!-- <li>
 								<div class="select_option mb-0">
 									<select>
 										<option data-display="Select">Select Your Language</option>
@@ -108,7 +108,7 @@
 										<option value="Franch">Franch</option>
 									</select>
 								</div>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</div>
@@ -181,76 +181,27 @@
 
 		<!-- sidebar mobile menu - start
 			================================================== -->
-		<div class="sidebar-menu-wrapper">
-			<div class="sidebar_mobile_menu">
-
-				<span class="close_btn"><i class="fal fa-times"></i></span>
-
-				<div class="mobile_menu_list clearfix">
-					<ul class="ul_li_block clearfix">
-						<li class="active dropdown">
-							<a href="portfolio_metro.html#!" data-bs-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false">Home</a>
-							<ul class="dropdown-menu">
-								<li><a href="index_1.html">Home Page V.1</a></li>
-								<li><a href="index_2.html">Home Page V.2</a></li>
-								<li><a href="index_3.html">Home Page V.3</a></li>
-							</ul>
-						</li>
-						<li><a href="about.html">About</a></li>
-						<li class="dropdown">
-							<a href="portfolio_metro.html#!" data-bs-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false">Services</a>
-							<ul class="dropdown-menu">
-								<li><a href="service_1.html">Service V.1</a></li>
-								<li><a href="service_2.html">Service V.2</a></li>
-								<li><a href="service_details.html">Service Details</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="portfolio_metro.html#!" data-bs-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false">Pages</a>
-							<ul class="dropdown-menu">
-								<li><a href="pricing.html">Pricing Plans</a></li>
-								<li><a href="team.html">Creative Team</a></li>
-								<li class="dropdown">
-									<a href="portfolio_metro.html#!" data-bs-toggle="dropdown" aria-haspopup="true"
-										aria-expanded="false">Our Portfolio</a>
-									<ul class="dropdown-menu">
-										<li><a href="portfolio_metro.html">Portfolio Metro</a></li>
-										<li><a href="portfolio_masonry.html">Portfolio Masonry</a></li>
-										<li><a href="portfolio_details.html">Portfolio Details</a></li>
-									</ul>
-								</li>
-								<li><a href="faq.html">F.A.Q.</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="portfolio_metro.html#!" data-bs-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false">Shop</a>
-							<ul class="dropdown-menu">
-								<li><a href="shop.html">Our Shop</a></li>
-								<li><a href="shop_details.html">Shop Details</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="portfolio_metro.html#!" data-bs-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false">News</a>
-							<ul class="dropdown-menu">
-								<li><a href="blog_grid.html">Blog Grid</a></li>
-								<li><a href="blog_standard.html">Blog Standard</a></li>
-								<li><a href="blog_details.html">Blog Details</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Conatct</a></li>
-					</ul>
+			<div class="sidebar-menu-wrapper">
+				<div class="sidebar_mobile_menu">
+	
+					<span class="close_btn"><i class="fal fa-times"></i></span>
+	
+					<div class="mobile_menu_list clearfix">
+						<ul class="ul_li_block clearfix">
+							<li><a href="index.html" aria-haspopup="true" aria-expanded="false">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="activities.html" aria-haspopup="true" aria-expanded="false">Activities</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="blogs.html">Blogs</a></li>
+							<li><a href="contact.html">Conatct</a></li>
+						</ul>
+					</div>
+	
 				</div>
-
+				<div class="overlay"></div>
 			</div>
-			<div class="overlay"></div>
-		</div>
-		<!-- sidebar mobile menu - end
-			================================================== -->
+			<!-- sidebar mobile menu - end
+				================================================== -->
 
 
 		<!-- breadcrumb_section - start
@@ -403,180 +354,180 @@
 
 	<!-- footer_section - start
 		================================================== -->
-	<footer class="footer_section bg_default_blue text-white clearfix">
-		<div class="container">
-
-			<div class="footer_brand_area border_bottom clearfix">
-				<div class="row align-items-center justify-content-lg-between">
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="brand_logo">
-							<a href="portfolio_metro.html#!">
-								<img src="assets/images/logo/logo_01_1x.png"
-									srcset="assets/images/logo/logo_01_2x.png 2x" alt="logo_not_found">
-							</a>
-						</div>
-					</div>
-
-					<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-						<div class="brands_list">
-							<div class="logo_image">
-								<a href="portfolio_metro.html#!">
-									<img src="assets/images/brands/img_05.png" alt="logo_not_found">
-								</a>
-							</div>
-
-							<div class="logo_image">
-								<a href="portfolio_metro.html#!">
-									<img src="assets/images/brands/img_06.png" alt="logo_not_found">
-								</a>
-							</div>
-
-							<div class="logo_image">
-								<a href="portfolio_metro.html#!">
-									<img src="assets/images/brands/img_07.png" alt="logo_not_found">
-								</a>
-							</div>
-
-							<div class="logo_image">
-								<a href="portfolio_metro.html#!">
-									<img src="assets/images/brands/img_08.png" alt="logo_not_found">
+		<footer class="footer_section bg_default_blue text-white clearfix">
+			<div class="container">
+	
+				<!-- <div class="footer_brand_area border_bottom clearfix">
+					<div class="row align-items-center justify-content-lg-between">
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="brand_logo">
+								<a href="blogs.html">
+									<img src="assets/images/logo/logo_01_1x.png"
+										srcset="assets/images/logo/logo_01_2x.png 2x" alt="logo_not_found">
 								</a>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="footer_widget_area clearfix">
-				<div class="row justify-content-lg-between justify-content-md-center justify-content-sm-center">
-					<div class="col-lg-2 col-md-4 col-sm-12 col-xs-12">
-						<div class="widget footer_useful_links">
-							<h3 class="footer_widget_title">Quick Links</h3>
-							<ul class="ul_li_block clearfix">
-								<li><a href="portfolio_metro.html#!">Company History</a></li>
-								<li><a href="portfolio_metro.html#!">Exclusive Team </a></li>
-								<li><a href="portfolio_metro.html#!">Latest News</a></li>
-								<li><a href="portfolio_metro.html#!">Recent Product</a></li>
-								<li><a href="portfolio_metro.html#!">Win Awards</a></li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-2 col-md-4 col-sm-12 col-xs-12">
-						<div class="widget footer_useful_links">
-							<h3 class="footer_widget_title">Services</h3>
-							<ul class="ul_li_block clearfix">
-								<li><a href="portfolio_metro.html#!">Design & Branding</a></li>
-								<li><a href="portfolio_metro.html#!">3D Design & Printing</a></li>
-								<li><a href="portfolio_metro.html#!">Offset Printing</a></li>
-								<li><a href="portfolio_metro.html#!">Business Printing</a></li>
-								<li><a href="portfolio_metro.html#!">Corporate Printing</a></li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="widget recent_works_list">
-							<h3 class="footer_widget_title">Recent News</h3>
-							<ul class="ul_li_block clearfix">
-								<li>
-									<div class="small_blog clearfix">
-										<a class="item_image" target="_blank" href="blog_details.html">
-											<img src="assets/images/recent_works/img_01.png" alt="image_not_found">
-										</a>
-										<div class="item_content">
-											<h3 class="item_title">
-												<a target="_blank" href="blog_details.html">
-													Web Designers Can Help Restaura Move Into
-												</a>
-											</h3>
-											<span class="post_date"><i class="far fa-calendar-alt"></i> 25 Nov
-												2020</span>
-										</div>
-									</div>
-								</li>
-
-								<li>
-									<div class="small_blog clearfix">
-										<a class="item_image" target="_blank" href="blog_details.html">
-											<img src="assets/images/recent_works/img_02.png" alt="image_not_found">
-										</a>
-										<div class="item_content">
-											<h3 class="item_title">
-												<a target="_blank" href="blog_details.html">
-													Building Facial Recognits Web Application React
-												</a>
-											</h3>
-											<span class="post_date"><i class="far fa-calendar-alt"></i> 25 Nov
-												2020</span>
-										</div>
-									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-						<div class="widget footer_contact_form">
-							<h3 class="footer_widget_title">Contact Us</h3>
-							<p class="mb_30">
-								Sed ut persiatis unde omnis iste natusec error sit voluptatem accusantium
-							</p>
-							<form action="portfolio_metro.html#">
-								<div class="form_item">
-									<input type="email" name="email" placeholder="Enter Your Email">
-									<button type="submit" class="submit_btn"><i class="far fa-arrow-right"></i></button>
+	
+						<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+							<div class="brands_list">
+								<div class="logo_image">
+									<a href="blogs.html">
+										<img src="assets/images/brands/img_05.png" alt="logo_not_found">
+									</a>
 								</div>
-							</form>
-							<span class="footer_hotline"><i class="far fa-phone"></i> +012 (345) 678 99</span>
+	
+								<div class="logo_image">
+									<a href="blogs.html">
+										<img src="assets/images/brands/img_06.png" alt="logo_not_found">
+									</a>
+								</div>
+	
+								<div class="logo_image">
+									<a href="blogs.html">
+										<img src="assets/images/brands/img_07.png" alt="logo_not_found">
+									</a>
+								</div>
+	
+								<div class="logo_image">
+									<a href="blogs.html">
+										<img src="assets/images/brands/img_08.png" alt="logo_not_found">
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div> -->
+	
+				<div class="footer_widget_area clearfix">
+					<div class="row justify-content-lg-between justify-content-md-center justify-content-sm-center">
+						<div class="col-lg-2 col-md-4 col-sm-12 col-xs-12">
+							<div class="widget footer_useful_links">
+								<h3 class="footer_widget_title">Quick Links</h3>
+								<ul class="ul_li_block clearfix">
+									<li><a href="blogs.html">Company History</a></li>
+									<li><a href="blogs.html">Exclusive Team </a></li>
+									<li><a href="blogs.html">Latest News</a></li>
+									<li><a href="blogs.html">Recent Product</a></li>
+									<li><a href="blogs.html">Win Awards</a></li>
+								</ul>
+							</div>
+						</div>
+	
+						<div class="col-lg-2 col-md-4 col-sm-12 col-xs-12">
+							<div class="widget footer_useful_links">
+								<h3 class="footer_widget_title">Services</h3>
+								<ul class="ul_li_block clearfix">
+									<li><a href="blogs.html">Design & Branding</a></li>
+									<li><a href="blogs.html">3D Design & Printing</a></li>
+									<li><a href="blogs.html">Offset Printing</a></li>
+									<li><a href="blogs.html">Business Printing</a></li>
+									<li><a href="blogs.html">Corporate Printing</a></li>
+								</ul>
+							</div>
+						</div>
+	
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="widget recent_works_list">
+								<h3 class="footer_widget_title">Recent News</h3>
+								<ul class="ul_li_block clearfix">
+									<li>
+										<div class="small_blog clearfix">
+											<a class="item_image" target="_blank" href="blogs.html">
+												<img src="assets/images/recent_works/img_01.png" alt="image_not_found">
+											</a>
+											<div class="item_content">
+												<h3 class="item_title">
+													<a target="_blank" href="blogs.html">
+														Web Designers Can Help Restaura Move Into
+													</a>
+												</h3>
+												<span class="post_date"><i class="far fa-calendar-alt"></i> 25 March
+													2025</span>
+											</div>
+										</div>
+									</li>
+	
+									<li>
+										<div class="small_blog clearfix">
+											<a class="item_image" target="_blank" href="blogs.html">
+												<img src="assets/images/recent_works/img_02.png" alt="image_not_found">
+											</a>
+											<div class="item_content">
+												<h3 class="item_title">
+													<a target="_blank" href="blogs.html">
+														Building Facial Recognits Web Application React
+													</a>
+												</h3>
+												<span class="post_date"><i class="far fa-calendar-alt"></i> 25 March
+													2025</span>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
+	
+						<div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+							<div class="widget footer_contact_form">
+								<h3 class="footer_widget_title">Contact Us</h3>
+								<p class="mb_30">
+									Sed ut persiatis unde omnis iste natusec error sit voluptatem accusantium
+								</p>
+								<form action="blogs.html">
+									<div class="form_item">
+										<input type="email" name="email" placeholder="Enter Your Email">
+										<button type="submit" class="submit_btn"><i class="far fa-arrow-right"></i></button>
+									</div>
+								</form>
+								<span class="footer_hotline"><i class="far fa-phone"></i> +254707065777</span>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-
-			<div class="footer_bottom_boxed clearfix">
-				<div class="row align-items-center justify-content-lg-between justify-content-md-between">
-					<div class="col-lg-6 col-md-6">
-						<p class="copyright_text mb-0">© Copyright 2023 All Right Reserved Design By <a
-								class="author_links" target="_blank" href="https://themeforest.net/user/bdevs">BDevs</a>
-						</p>
-					</div>
-
-					<div class="col-lg-6 col-md-6">
-						<ul class="circle_social_links ul_li_right clearfix">
-							<li>
-								<a class="bg_facebook" href="portfolio_metro.html#!">
-									<i class="fab fa-facebook-f"></i>
-									<i class="fab fa-facebook-f"></i>
-								</a>
-							</li>
-							<li>
-								<a class="bg_twitter" href="portfolio_metro.html#!">
-									<i class="fab fa-twitter"></i>
-									<i class="fab fa-twitter"></i>
-								</a>
-							</li>
-							<li>
-								<a class="bg_youtube" href="portfolio_metro.html#!">
-									<i class="fab fa-youtube"></i>
-									<i class="fab fa-youtube"></i>
-								</a>
-							</li>
-							<li>
-								<a class="bg_linkedin" href="portfolio_metro.html#!">
-									<i class="fab fa-linkedin"></i>
-									<i class="fab fa-linkedin"></i>
-								</a>
-							</li>
-						</ul>
+	
+				<div class="footer_bottom_boxed clearfix">
+					<div class="row align-items-center justify-content-lg-between justify-content-md-between">
+						<div class="col-lg-6 col-md-6">
+							<p class="copyright_text mb-0">© Copyright 2025 All Right Reserved Design By <a
+									class="author_links" target="_blank">HeatArt Kakuma</a>
+							</p>
+						</div>
+	
+						<div class="col-lg-6 col-md-6">
+							<ul class="circle_social_links ul_li_right clearfix">
+								<li>
+									<a class="bg_facebook" href="blogs.html">
+										<i class="fab fa-facebook-f"></i>
+										<i class="fab fa-facebook-f"></i>
+									</a>
+								</li>
+								<li>
+									<a class="bg_twitter" href="blogs.html">
+										<i class="fab fa-twitter"></i>
+										<i class="fab fa-twitter"></i>
+									</a>
+								</li>
+								<li>
+									<a class="bg_youtube" href="blogs.html">
+										<i class="fab fa-youtube"></i>
+										<i class="fab fa-youtube"></i>
+									</a>
+								</li>
+								<li>
+									<a class="bg_linkedin" href="blogs.html">
+										<i class="fab fa-linkedin"></i>
+										<i class="fab fa-linkedin"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
+	
 			</div>
-
-		</div>
-	</footer>
-	<!-- footer_section - end
-		================================================== -->
+		</footer>
+		<!-- footer_section - end
+			================================================== -->
 
 
 	<!-- fraimwork - jquery include -->
