--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
 						<div class="banner_contant">
-							<h4 class="sub_title wow fadeInUp2" data-wow-delay=".2s">Welcome to Printem</h4>
+							<h4 class="sub_title wow fadeInUp2" data-wow-delay=".2s">Welcome to HeatArt Kakuma</h4>
 							<h3 class="item_title text-white wow fadeInUp2" data-wow-delay=".3s">
 								Modern Printing Agency
 							</h3>
