--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@
 
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".1s">
 						<ul class="breadcrumb_nav ul_li_right clearfix">
-							<li><a href="index_1.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>About Us</li>
 						</ul>
 					</div>
