--- a/activities.html
+++ b/activities.html
@@ -211,13 +211,13 @@
 			<div class="container">
 				<div class="row align-items-center justify-content-lg-between">
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay=".1s">
-						<h1 class="page_title mb-0">Service</h1>
+						<h1 class="page_title mb-0">Activities</h1>
 					</div>
 
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".1s">
 						<ul class="breadcrumb_nav ul_li_right clearfix">
-							<li><a href="index_1.html">Home</a></li>
-							<li>Service V.2</li>
+							<li><a href="index.html">Home</a></li>
+							<li>Activities</li>
 						</ul>
 					</div>
 				</div>
@@ -300,7 +300,7 @@
 							<h2 class="big_title mb-0">
 								We Provide Lot’s Of Printing &amp; Branding Service
 							</h2>
-							<span class="biggest_title">Services</span>
+							<span class="biggest_title">Activities</span>
 						</div>
 					</div>
 				</div>
