--- a/contact.html
+++ b/contact.html
@@ -218,8 +218,8 @@
 
 					<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".1s">
 						<ul class="breadcrumb_nav ul_li_right clearfix">
-							<li><a href="index_1.html">Home</a></li>
-							<li>Contact Us</li>
+							<li><a href="index.html">Home</a></li>
+							<li>contact us</li>
 						</ul>
 					</div>
 				</div>
