adding changes to profile

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 								</p>
 								<div class="avatar_wrap">
 									<div class="avatar_image">
-										<img src="assets/images/meta/img_01.png" alt="image_not_found">
+										<!-- <img src="assets/images/meta/img_01.png" alt="image_not_found"> -->
 									</div>
 									<div class="avatar_content">
 										<h4 class="avatar_name">Sudan Nyang</h4>
