--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-	<title>Contact Us - Frintem HTML5 Template</title>
+	<title>HeatArt Kakuma</title>
 	<link rel="shortcut icon" href="assets/images/logo/favourite_icon_01.png">
 
 	<!-- fraimwork - css include -->
@@ -254,21 +254,21 @@
 									<div class="item_icon bg_default_orange"><i class="fal fa-map-marker-alt"></i></div>
 									<div class="item_content">
 										<h4>Locations</h4>
-										<p>205 Main Street, USA</p>
+										<p>Kakuma 4, Turkana Kenya</p>
 									</div>
 								</li>
 								<li class="wow fadeInUp2" data-wow-delay=".4s">
 									<div class="item_icon bg_default_yellow"><i class="fal fa-envelope"></i></div>
 									<div class="item_content">
 										<h4>Email Us</h4>
-										<p>support@gmail.com</p>
+										<p>heatartkakuma@gmail.com</p>
 									</div>
 								</li>
 								<li class="wow fadeInUp2" data-wow-delay=".5s">
 									<div class="item_icon bg_default_lightblue"><i class="fal fa-phone"></i></div>
 									<div class="item_content">
 										<h4>Phone Us</h4>
-										<p>+012 (345) 678 99</p>
+										<p>+254707065777</p>
 									</div>
 								</li>
 							</ul>
@@ -329,15 +329,15 @@
 
 
 		<!-- google map - start
-			================================================== -->
+    ================================================== -->
 		<div class="map_section wow fadeIn clearfix" data-wow-delay=".1s">
-			<div id="mapBox" data-lat="40.701083" data-lon="-74.1522848" data-zoom="12"
-				data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia." data-mlat="40.701083"
-				data-mlon="-74.1522848">
-			</div>
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3347.871130321448!2d34.80590172825307!3d3.7420090161128186!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1744638137748!5m2!1sen!2sus"
+				width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 		<!-- google map - end
-			================================================== -->
+		================================================== -->
 
 
 	</main>
