--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-	<title>Home Page V.2 - Frintem HTML5 Template</title>
+	<title>HeatArt Kakuma</title>
 	<link rel="shortcut icon" href="assets/images/logo/favourite_icon_01.png">
 
 	<!-- fraimwork - css include -->
