adding Donation.html codes again

--- a/blogs.html
+++ b/blogs.html
@@ -194,6 +194,7 @@
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="blogs.html">Blogs</a></li>
 							<li><a href="contact.html">Conatct</a></li>
+						<li><a class="custom_btn bg_default_yellow" href="Donate.html">Donate Now</a></li>
 						</ul>
 					</div>
 	
