--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<!-- backtotop - start -->
 	<div id="thetop"></div>
 	<div id="backtotop">
-		<a href="index_2.html#" id="scroll">
+		<a href="index.html" id="scroll">
 			<i class="far fa-arrow-up"></i>
 		</a>
 	</div>
@@ -194,6 +194,7 @@
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="blogs.html">Blogs</a></li>
 						<li><a href="contact.html">Conatct</a></li>
+						<li><a class="custom_btn bg_default_yellow" href="Donate.html">Donate Now</a></li>
 					</ul>
 				</div>
 
@@ -234,7 +235,7 @@
 								Modern Printing Agency
 							</h3>
 							<a class="custom_btn bg_default_orange wow fadeInUp2" data-wow-delay=".4s" target="_blank"
-								href="portfolio_metro.html">
+								href="gallery.html">
 								discover more
 								<span><i class="fal fa-arrow-right"></i></span>
 							</a>
